leptos_macro/tests/view/08_generic_prop_missing.stderr
error[E0277]: missing required prop `generic_fun` on component `Inner`
  --> tests/view/08_generic_prop_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42>
   |              ^^^^^ missing prop `generic_fun`
   |
   = help: the trait `__required_Inner_generic_fun` is not implemented for `leptos::prelude::__Absent`
   = note: required props: [`concrete_i32`, `generic_fun`, `children`]
note: required by a bound in `Inner::__PresenceBuilder::<(__F0, __F1, __F2)>::__require_props`
  --> tests/view/08_generic_prop_missing.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `__PresenceBuilder::<(__F0, __F1, __F2)>::__require_props`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<(leptos::prelude::__Present, leptos::prelude::__Absent, leptos::prelude::__Present)>`, but its trait bounds were not satisfied
  --> tests/view/08_generic_prop_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42>
   |              ^^^^^
...
17 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
  ::: $WORKSPACE/leptos/src/component.rs
   |
   | pub struct __Absent;
   | ------------------- doesn't satisfy `_: __required_Inner_generic_fun`
   |
note: trait bound `leptos::prelude::__Absent: __required_Inner_generic_fun` was not satisfied
  --> tests/view/08_generic_prop_missing.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
